appId: host.exp.Exponent
---
- assertVisible:
    text: "Join your family"

- hideKeyboard

- scrollUntilVisible:
    element:
      id: "child-pairing-submit-manual-code"
    direction: DOWN
    timeout: 10000
    visibilityPercentage: 80

- tapOn:
    id: "child-pairing-submit-manual-code"
    retryTapIfNoChange: true

- extendedWaitUntil:
    visible: "Protect Maya"
    timeout: 30000
